# kater

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  configure.ac
doc/: manual.html
kat/: arm8.kat  c11-old.kat  imm-genmc-nosave.kat  imm-genmc.kat  imm.kat  lkmm2.kat  pex86.kat  power-fm-orig.kat  power-fm-simpl-full.kat  power-fm-simpl.kat  power-fm.kat  power-weak.kat  ra-genmc.kat  rc11-genmc-nosave.kat  rc11-genmc.kat  rc11.kat  rc112.kat  sc-fm.kat  sc-genmc.kat  sc.kat  tso-fm.kat  tso-genmc.kat  tso.kat
m4/: ax_bison.m4  ax_flex.m4
scripts/: checkall.sh
src/: AdjList.hpp  BasicPredicates.hpp  Builtins.cpp  Builtins.hpp  CMakeLists.txt  CNFAs.hpp  Config.cpp  Config.hpp  Constraint.cpp  Constraint.hpp  Counterexample.cpp  Counterexample.hpp  DbgInfo.cpp  DbgInfo.hpp  Error.cpp  Error.hpp  GenMCPrinter.cpp  GenMCPrinter.hpp  Inclusion.hpp  KatModule.cpp  KatModule.hpp  KatModuleAPI.hpp  Kater.cpp  Kater.hpp  Lexer.lpp  Makefile.am  NFA.cpp  NFA.hpp  NFAUtils.cpp  NFAUtils.hpp  Parser.ypp  ParsingDriver.cpp  ParsingDriver.hpp  Predicate.cpp  Predicate.hpp  Printer.cpp  Printer.hpp  RegExp.cpp  RegExp.hpp  RegExpUtils.hpp  (+16 more)
tests/cooking/: eq-co.kat
tests/correct/: comp-imm-arm8.kat  comp-imm-tso.kat  comp-power-power-simpl.kat  comp-psc-tso-rfis.kat  comp-rc11-arm8.kat  comp-rc11-imm.kat  comp-rc11-power-weak.kat  comp-rc11-tso.kat  comp-rc11f-power-simpl-full.kat  comp-rc11ra-power.kat  comp-rc11rw-power-simpl-full.kat  comp-rc11s-arm8.kat  comp-rc11s-tso.kat  eq-co.kat  eq-eco-paper.kat  eq-eco.kat  eq-ra1-ra2.kat  eq-ra1-ra3.kat  eq-rc11-rc112.kat  eq-sc-scfm.kat  eq-tso-tsofm.kat
tests/correct/basic/: disjoint_predicates.kat  dom_codom.kat  id-in-refl.kat  rec-rewrite.kat  recursion.kat  rfi-in-po.kat  user_predicates.kat  user_relation.kat
tests/correct/compilation/: comp-imm-arm8.kat  comp-imm-tso.kat  comp-power-power-simpl.kat  comp-psc-tso-rfis.kat  comp-rc11-arm8.kat  comp-rc11-imm.kat  comp-rc11-power-weak.kat  comp-rc11-tso.kat  comp-rc11f-power-simpl-full.kat  comp-rc11ra-power.kat  comp-rc11rw-power-simpl-full.kat  comp-rc11s-arm8.kat  comp-rc11s-tso.kat
tests/correct/equivalence/: eq-eco-paper.kat  eq-eco-user.kat  eq-ra1-ra2.kat  eq-ra1-ra3.kat  eq-rc11-rc112.kat  eq-sc-scfm.kat  eq-tso-tsofm.kat
tests/wrong/: aa_in_aplus.kat  comp-c11-power-simpl.kat  comp-c11-power-weak.kat  comp-psc-tso2.kat  comp-psc-tso3.kat  demo-eco.kat  demo-ra.kat  reflex-is-id.kat
tests/wrong/basic/: composable.kat  demo-eco.kat  demo-tso.kat  irreflexive.kat  non-transitive.kat
tests/wrong/compilation/: comp-c11-power-simpl.kat  comp-c11-power-weak.kat  comp-psc-tso2.kat  comp-psc-tso3.kat
tests/wrong/equivalence/: eq-ra1-ra2-no-id.kat  eq-ra1-ra2-no-universe.kat
tests/wrong/parsing/: po-imm-use.kat  recursion_nonleft.kat  recursion_redef.kat  recursion_star.kat  redef.kat  undecl_let.kat  undecl_let_rec.kat
utils/: kat-mode.el
